# todoer

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/plans/: 2026-03-05-todoer-design.md
src/: lib.rs  main.rs  models.rs  project.rs
tests/: project_resolution.rs
